
.. contents::


Changes Since 0.13.1
====================

* docs/ref/rst/restructuredtext.txt:

  - Added documentation for escaped whitespace in URI contexts.
  - Clarify use of Unicode character categories.

* docutils/parsers/rst/states.py:

  - Added functionality: escaped whitespace in URI contexts.
  - Recognize non-ASCII whitespace around inline literal, target,
    and substitution.

* docutils/parsers/rst/directives/tables.py:

  - Rework patch [ 120 ] (revert change to ``Table.get_column_widths()``
    that led to problems in an application with a custom table directive).

* docutils/utils/__init__.py:

  - Added ``split_escaped_whitespace`` function, support for escaped
    whitespace in URI contexts.

* docutils/utils/smartquotes.py:

  - Update quote definitions for languages et, fi, ro, sv, tr, uk.
  - New quote definitions for hr, hsb, hu, lv, sl.

* docutils/writers/_html_base.py

  - Provide default title in metadata (required by HTML5).

* tools/rst2html4.py: New front-end.

* tools/dev/generate_punctuation_chars.py: New skript
  to test and update utils.punctuation_chars.

Release 0.13.1 (2016-12-09)
===========================

* docutils/languages/fa.py
  docutils/parsers/rst/languages/fa.py
  docutils/languages/la.py
  docutils/parsers/rst/languages/la.py:

  - Apply [ 133 ] Persian mappings by Shahin Azad.
  - Apply [ 135 ] Language modules for Latvian by Alexander Smishlajev

* docutils/nodes.py

  - Fix [ 253 ] Attribute key without value not allowed in XML.

* docutils/parsers/

  - Apply [ 103 ] Recognize inline markups without word boundaries.
  - Enable escaping in embedded URIs and aliases (fixes [ 284 ]).

* docutils/parsers/rst/__init__.py

  - Fix [ 233 ] Change the base URL for the :rfc: role.

* docutils/parsers/rst/directives/tables.py

  - Apply [ 120 ] tables accept option widths: list of relative widths, 'auto'
    or 'grid'.

  - Implement feature request [ 48 ]
    Add :align: option to the table directives.